# coq

./: .gitignore  .merlin  .travis.yml  CHANGES  CHANGES.md  Makefile  Makefile.build  Makefile.common  Makefile.ide  configure.ml  coq.lua  default.nix  dune-project  go.sh
API/: API.ml  API.mli
checker/: check.ml  check.mllib  checkInductive.ml  checker.ml  closure.ml  declarations.ml  declarations.mli  environ.ml  environ.mli  indtypes.ml  inductive.ml  mod_checking.ml  mod_checking.mli  reduction.ml  safe_typing.ml  safe_typing.mli  subtyping.ml  term.ml  univ.ml  validate.ml  values.ml
clib/: cList.ml  option.ml  option.mli
coqpp/: coqpp_main.ml
dev/: base_include  db  include  make-installer-win32.sh  make-installer-win64.sh  printers.mllib  top_printers.ml  vm_printers.ml
dm/: documentManager.ml  documentManager.mli  dune  executionManager.ml  executionManager.mli
engine/: eConstr.ml  eConstr.mli  evd.ml  (+14 more)
ide/vscoq/: dune  lspManager.ml  lspManager.mli  vscoqtop.ml  vscoqtop_proof_worker.ml  vscoqtop_tactic_worker.ml  vscoqtop_worker.ml
stm/: asyncTaskQueue.ml  asyncTaskQueue.mli  delegationManager.ml  delegationManager.mli  document.ml  documentManager.ml  documentManager.mli  dune  executionManager.ml  executionManager.mli  lemmas.ml  scheduler.ml  sel.ml  sel.mli  stm.ml  stm.mli  stm.mllib  tQueue.ml  texmacspp.ml  texmacspp.mli  vernac_classifier.ml  workerPool.mli
toplevel/: assumptions.ml  auto_ind_decl.ml  auto_ind_decl.mli  autoinstance.ml  ccompile.ml  ccompile.mli  cerrors.ml  class.ml  classes.ml  classes.mli  command.ml  command.mli  coq_toplevel.ml  coq_toplevel.mli  coqargs.ml  coqargs.mli  coqc.ml  coqinit.ml  coqinit.mli  coqloop.ml  coqloop.mli  coqtop.ml  coqtop.mli  discharge.ml  discharge.mli  dune  explainErr.ml  g_toplevel.mlg  himsg.ml  ide_slave.ml  ind_tables.ml  ind_tables.mli  indschemes.ml  lemmas.ml  lemmas.mli  libtypes.ml  locality.ml  locality.mli  metasyntax.ml  mltop.ml4  (+18 more)
(+679 files in other folders)
