(library
 (name stm)
 (synopsis "Coq's State Transaction Machine")
 (public_name coq.stm)
 (wrapped false)
 (modules asyncTaskQueue coqworkmgrApi dag proofBlockDelimiter spawned stm vcs vio_checking workerPool tQueue partac stmargs)
 (libraries coq.sysinit))

(library
 (name dm)
 (synopsis "Coq's Document Manager and Proof Checking Scheduler")
 (public_name coq.dm)
 (wrapped false)
 (modules delegationManager documentManager document executionManager scheduler sel)
 (libraries coq.sysinit coq.vernac))

(env
  (dev
    (flags (:standard -warn-error -A))))
