;(library
; (name core)
; (public_name vscoq-server.core)
; (wrapped false)
; (modules document)
; (libraries coq.lib))

(executable
 (name vscoqtop)
 (public_name vscoqtop.opt)
 (package vscoq-server)
 (modules vscoqtop lspManager)
 (libraries coq.dm coq.toplevel yojson)
 (modes native byte)
 (link_flags -linkall))

(executable
 (name vscoqtop_proof_worker)
 (public_name vscoqtop_proof_worker.opt)
 (package vscoq-server)
 (modules vscoqtop_proof_worker)
 (libraries coq.dm coq.toplevel)
 (link_flags -linkall))

; (install
;  (section bin)
;  (package vscoq-server)
;  (files (vscoqtop.bc as vscoqtop.byte)))

(env
  (dev
    (flags (:standard -warn-error -A))))
